tests/diagnostics/str_to_string_arg.kal
# A str is not auto-converted to String (only String -> str is). Use string(s).
fn need_owned(s: String) -> i64 = len(s);
{ printi(need_owned("literal")); };
